# rosetta

./: .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: tests.yml  update-PyPi-package-rosetta-xl.yml
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/features/about/: About.css  AboutRosetta.tsx  ProfileHeader.tsx  Publications.tsx  Timeline.tsx  index.ts
frontend/src/components/features/feedback/: Feedback.css  FeedbackModal.test.tsx  FeedbackModal.tsx
frontend/src/components/features/translate/: LanguageSelector.tsx  Progress.css  ProgressIndicator.test.tsx  ProgressIndicator.tsx  ResultDisplay.tsx  SheetSelector.tsx  Translate.css  TranslateForm.tsx  (+1 more)
frontend/src/components/layout/: Container.tsx  Footer.tsx  Header.tsx  Layout.css
frontend/src/components/ui/: Button.css  Button.tsx  Card.css  Card.tsx  Dropdown.css  Dropdown.tsx  FileDropzone.css  FileDropzone.tsx  Recaptcha.css  Recaptcha.tsx  index.ts
frontend/src/hooks/: index.ts  useDarkMode.ts  useFileUpload.ts  useTranslate.ts
frontend/src/lib/: languages.ts  utils.test.ts  utils.ts
frontend/src/pages/: About.tsx
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
src/rosetta/: main.py
src/rosetta/api/: __init__.py  app.py
src/rosetta/core/: config.py
src/rosetta/models/: __init__.py  cell.py
src/rosetta/services/: extractor.py  translator.py
tests/: test_api.py
